# aifw

./: README.md  pyproject.toml
docs/: architecture.md  lxd-integration.md
docs/superpowers/plans/: 2026-03-28-local-clone-repo-strategy.md  2026-03-29-spec-a-core-workflow.md  2026-03-29-spec-b-operations.md
docs/superpowers/specs/: 2026-03-28-local-clone-repo-strategy-design.md  2026-03-29-spec-a-core-workflow-design.md  2026-03-29-spec-b-operations-design.md  2026-03-29-spec-c-quality-of-life-design.md
sample/: config.toml
scripts/: base-container.sh
src/aifw/: __init__.py  __main__.py  claude.py  cli.py  config.py  dispatch.py  events.py  git.py  lxd.py  mission.py  status.py  tmux.py  workers.py
templates/: orchestrator-CLAUDE.md  worker-CLAUDE.md  worker_brief.md
tests/: test_config.py  test_events.py  test_git.py  test_mission.py  test_status.py  test_workers.py
